bug fix and jar